--- a/yf_news.ipynb
+++ b/yf_news.ipynb
@@ -1471,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1496,16 +1496,6 @@
     "\n",
     "        df.iloc[index][7] = paragraphs\n",
     "\n",
-    "        summary_pipeline = pipeline(\"summarization\", model=\"pszemraj/long-t5-tglobal-base-16384-book-summary\")\n",
-    "\n",
-    "        summary = [None] * len(df)\n",
-    "        index = -1\n",
-    "        for articles in df['article']:\n",
-    "            index+=1\n",
-    "            result = summary_pipeline(articles[:512])[0]\n",
-    "            summary[index] = result\n",
-    "        df.iloc[index][8] = summary\n",
-    "\n",
     "    except urllib.error.HTTPError as err:\n",
     "        print(err.code)\n",
     "\n",
@@ -1523,6 +1513,37 @@
    "source": [
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary_pipeline = pipeline(\"summarization\", model=\"pszemraj/long-t5-tglobal-base-16384-book-summary\")\n",
+    "\n",
+    "summary = [None] * len(df)\n",
+    "index = -1\n",
+    "for articles in df['article']:\n",
+    "    index+=1\n",
+    "    result = summary_pipeline(articles[:512])[0]\n",
+    "    summary[index] = result\n",
+    "df.iloc[index][8] = summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
