--- a/yf_news.ipynb
+++ b/yf_news.ipynb
@@ -1490,9 +1490,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Your max_length is set to 512, but you input_length is only 208. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=104)\n"
+     ]
+    }
+   ],
    "source": [
     "summary_pipeline = pipeline(\"summarization\", model=\"pszemraj/long-t5-tglobal-base-16384-book-summary\")\n",
     "\n",
@@ -1502,7 +1510,7 @@
     "    index+=1\n",
     "    result = summary_pipeline(articles[:512])[0]\n",
     "    summary[index] = result\n",
-    "df.iloc[index][8] = summary"
+    "df['summary'] = summary"
    ]
   },
   {
