--- a/yf_news.ipynb
+++ b/yf_news.ipynb
@@ -1497,7 +1497,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Your max_length is set to 512, but you input_length is only 208. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=104)\n"
+      "Your max_length is set to 512, but you input_length is only 208. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=104)\n",
+      "Your max_length is set to 512, but you input_length is only 186. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=93)\n",
+      "Your max_length is set to 512, but you input_length is only 186. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=93)\n",
+      "Your max_length is set to 512, but you input_length is only 186. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=93)\n",
+      "Your max_length is set to 512, but you input_length is only 160. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=80)\n",
+      "Your max_length is set to 512, but you input_length is only 160. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=80)\n",
+      "Your max_length is set to 512, but you input_length is only 186. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=93)\n",
+      "Your max_length is set to 512, but you input_length is only 1. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=0)\n",
+      "Your max_length is set to 512, but you input_length is only 190. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=95)\n",
+      "Your max_length is set to 512, but you input_length is only 208. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=104)\n",
+      "Your max_length is set to 512, but you input_length is only 212. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=106)\n",
+      "Your max_length is set to 512, but you input_length is only 218. You might consider decreasing max_length manually, e.g. summarizer('...', max_length=109)\n"
      ]
     }
    ],
