--- a/yf_news.ipynb
+++ b/yf_news.ipynb
@@ -167,13 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from transformers import pipeline\n",
-    "\n",
-    "# import warnings\n",
-    "# warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "# from IPython.core.interactiveshell import InteractiveShell\n",
-    "# InteractiveShell.ast_node_interactivity = 'all'"
+    "# from transformers import pipeline"
    ]
   },
   {
@@ -415,13 +409,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import pipeline\n",
-    "\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\")\n",
-    "\n",
-    "from IPython.core.interactiveshell import InteractiveShell\n",
-    "InteractiveShell.ast_node_interactivity = 'all'"
+    "from transformers import pipeline"
    ]
   },
   {
@@ -545,7 +533,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## Get the bar chart from 5 rated reviews ##\n",
+    "freq_dict = defaultdict(int)\n",
+    "for sent in df[\"article\"]:\n",
+    "    for word in generate_ngrams(sent,3):\n",
+    "        freq_dict[word] += 1\n",
+    "fd_sorted = pd.DataFrame(sorted(freq_dict.items(), key=lambda x: x[1])[::-1])\n",
+    "fd_sorted.columns = [\"word\", \"wordcount\"]\n",
+    "trace0 = horizontal_bar_chart(fd_sorted.head(10), 'green')\n",
+    "\n",
+    "# Creating two subplots\n",
+    "fig = tools.make_subplots(rows=1, cols=1, vertical_spacing=0.04,\n",
+    "                          subplot_titles=[\"Frequent words\"])\n",
+    "fig.append_trace(trace0, 1, 1)\n",
+    "#fig.append_trace(trace1, 1, 2)\n",
+    "fig['layout'].update(height=600, width=600, paper_bgcolor='rgb(233,233,233)', title=\"Word Count Plots\")\n",
+    "py.iplot(fig, filename='word-plots');"
+   ]
   },
   {
    "cell_type": "code",
