--- a/yf_news.ipynb
+++ b/yf_news.ipynb
@@ -695,12 +695,14 @@
     "# Summary of Articles\n",
     "summary_pipeline = pipeline(\"summarization\", model=\"pszemraj/long-t5-tglobal-base-16384-book-summary\")\n",
     "\n",
-    "summary = [None] * len(df)\n",
+    "#summary = [None] * len(df)\n",
+    "summary = []\n",
     "index = -1\n",
     "for articles in df['article']:\n",
     "    index+=1\n",
     "    result = summary_pipeline(articles[:512])[0]\n",
-    "    summary[index] = result\n",
+    "    summary.append(str(result))\n",
+    "    #summary[index] = result\n",
     "df['summary'] = summary"
    ]
   },
