--- a/SPY_Track.ipynb
+++ b/SPY_Track.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,38 @@
     "import yfinance as yf\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from datetime import date"
+    "from datetime import date\n",
+    "from fbprophet import Prophet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load SPY price data\n",
+    "spy_data = pd.read_csv('SPY.csv')\n",
+    "spy_data = spy_data[['Date', 'Close']]\n",
+    "spy_data.columns = ['ds', 'y']\n",
+    "\n",
+    "# Initialize Prophet model\n",
+    "model = Prophet()\n",
+    "\n",
+    "# Fit the model on SPY data\n",
+    "model.fit(spy_data)\n",
+    "\n",
+    "# Create future dates for forecasting\n",
+    "future_dates = model.make_future_dataframe(periods=365)\n",
+    "\n",
+    "# Make predictions for future dates\n",
+    "forecast = model.predict(future_dates)\n",
+    "\n",
+    "# Plot the forecasted data\n",
+    "model.plot(forecast, xlabel='Date', ylabel='SPY Price')\n",
+    "\n",
+    "# Plot the forecasted trend and seasonality components\n",
+    "model.plot_components(forecast)\n"
    ]
   },
   {
@@ -521,7 +552,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1 (tags/v3.10.1:2cd268a, Dec  6 2021, 19:10:37) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.1"
   },
   "orig_nbformat": 4,
   "vscode": {
