--- a/SPY_Track.ipynb
+++ b/SPY_Track.ipynb
@@ -26,6 +26,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_input = input(\"Type in the Ticker: \")\n",
+    "print(\"You entered:\", text_input)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -38,7 +48,7 @@
     }
    ],
    "source": [
-    "spy_ohlc_df = yf.download('SPY', start=datetime.date.today() - datetime.timedelta(days=7), end=datetime.date.today(), interval='1m')\n",
+    "spy_ohlc_df = yf.download(text_input, start=datetime.date.today() - datetime.timedelta(days=7), end=datetime.date.today(), interval='1m')\n",
     "df1=spy_ohlc_df.reset_index()"
    ]
   },
