--- a/SPY_Track.ipynb
+++ b/SPY_Track.ipynb
@@ -22,7 +22,28 @@
     "import matplotlib.pyplot as plt\n",
     "from prophet import Prophet\n",
     "import datetime\n",
-    "import tkinter.messagebox as mbox"
+    "from datetime import date\n",
+    "import tkinter.messagebox as mbox\n",
+    "\n",
+    "\n",
+    "\n",
+    "import time\n",
+    "from selenium import webdriver\n",
+    "from bs4 import BeautifulSoup\n",
+    "from urllib.parse import urljoin\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = 'all'\n",
+    "\n",
+    "# Environment settings: \n",
+    "pd.set_option('display.max_column', None)\n",
+    "pd.set_option('display.max_rows', None)\n",
+    "pd.set_option('display.max_seq_items', None)\n",
+    "pd.set_option('display.max_colwidth', 500)\n",
+    "pd.set_option('expand_frame_repr', True)"
    ]
   },
   {
