--- a/SPY_Track.ipynb
+++ b/SPY_Track.ipynb
@@ -2315,11 +2315,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_input = input(\"Type in the Ticker: \")\n",
+    "#message = text_input\n",
+    "#mbox.showinfo(\"The Ticker You've Entered:\", message)\n",
+    "print(\"You entered:\", text_input)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = \"https://finviz.com/quote.ashx?t=SPY&ty=c&ta=1&p=d\"\n",
+    "url = f\"https://finviz.com/quote.ashx?t={text_input}&ty=c&ta=1&p=d\"\n",
     "\n",
     "\n",
     "headers = {\"User-Agent\": \"Mozilla/5.0\"}\n",
@@ -2482,12 +2494,7 @@
      ]
     }
    ],
-   "source": [
-    "text_input = input(\"Type in the Ticker: \")\n",
-    "#message = text_input\n",
-    "#mbox.showinfo(\"The Ticker You've Entered:\", message)\n",
-    "print(\"You entered:\", text_input)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
