--- a/SPY_Track.ipynb
+++ b/SPY_Track.ipynb
@@ -108,6 +108,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allow_stdin=True"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
