--- a/SPY_Track.ipynb
+++ b/SPY_Track.ipynb
@@ -1363,7 +1363,10 @@
     }
    ],
    "source": [
-    "spy_ohlc_df = yf.download(text_input, start=dt.date.today() - dt.timedelta(days=7), end=dt.date.today(), interval='1m')\n",
+    "# spy_ohlc_df = yf.download(text_input, start=dt.date.today() - dt.timedelta(days=7), end=dt.date.today(), interval='1m')\n",
+    "# df1=spy_ohlc_df.reset_index()\n",
+    "\n",
+    "spy_ohlc_df = yf.download(text_input, start=dt.date.today() - dt.timedelta(days=7), end=dt.date.today())\n",
     "df1=spy_ohlc_df.reset_index()"
    ]
   },
